Add target for checking version

--- a/quick-start/Makefile
+++ b/quick-start/Makefile
@@ -11,6 +11,7 @@
 # Variables related with folders
 LCD = $(shell pwd)
 
+THIS_MAKEFILE_VER_URL = https://raw.githubusercontent.com/marcinpraczko/collector/5-add-simple-makefile-for-downloading-modules-from-repo/quick-start/Makefile-verinfo.txt
 THIS_MAKEFILE_VER_FILENAME = Makefile-verinfo.txt
 THIS_MAKEFILE_VER = 0.1.0
 
@@ -22,13 +23,21 @@ help: ## HELP: Show this help message.
 	@echo '========'
 	@egrep '^(.+)\:\ ##\ (.+)' ${MAKEFILE_LIST} | column -t -c 2 -s ':#'
 
-.PHONY: init-check-update
-init-check-update: ## INIT: Check for available update for this Makefile
-	@echo "Checking for available update for this 'Makefile'"
 
-.PHONY: init-local
-init-local: ## INIT-LOCAL: Create initial structure on local folder
+.PHONY: init-local-check-update
+init-local-check-update: ## INIT-LOCAL: Check for available update for this Makefile
+	@echo "Checking for available update for this 'Makefile'"
+	@echo "URL: $(THIS_MAKEFILE_VER_URL)"
+	@echo -n "Current version   : "
+	@cat $(THIS_MAKEFILE_VER_FILENAME)
+	@echo -n "Available version : "
+	@curl $(THIS_MAKEFILE_VER_URL)
+
+
+.PHONY: init-local-setup
+init-local-setup: ## INIT-LOCAL: Create initial structure on local folder
 	@echo "Init local: Create initial structure on local folder"
+
 
 .PHONY: init-dump-version
 init-dump-version: ## INIT: Dump version for this Makefile
