--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -5,6 +5,7 @@ on:
   push:
     paths:
       - "testing-pip-install/**"
+      - ".github/workflows/**"
 
 jobs:
   build:
@@ -17,19 +18,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      if: always()
 
     - name: Set up Python ${{ matrix.python-version }}
+      if: always()
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
+      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Lint with flake8
+      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
         pip install flake8
@@ -39,6 +44,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
+      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
         pip install pytest
