--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,6 +1,8 @@
+# https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# https://www.techielass.com/trigger-a-github-action-workflow-when-a-folder-changes/
+
 name: Python package
 
-# https://www.techielass.com/trigger-a-github-action-workflow-when-a-folder-changes/
 on:
   push:
     paths:
@@ -12,9 +14,9 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
+      max-parallel: 3
       matrix:
-        python-version: [2.7, 3.6, 3.7, 3.8, 3.9, 3.10]
+        python-version: ["2.7", "3.6", "3.7", "3.8", "3.9, "3.10"]
 
     steps:
     - uses: actions/checkout@v1
@@ -27,14 +29,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
-      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip 
         pip install -r requirements.txt
 
     - name: Lint with flake8
-      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
         pip install flake8
@@ -44,7 +44,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
-      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
         pip install pytest
