--- a/.github/workflows/pip-install-tmuxp.yml
+++ b/.github/workflows/pip-install-tmuxp.yml
@@ -1,5 +1,6 @@
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 # https://www.techielass.com/trigger-a-github-action-workflow-when-a-folder-changes/
+# https://stackoverflow.com/questions/61070925/github-actions-disable-auto-cancel-when-job-fails
 
 name: PIP Install TMUXP
 
@@ -17,19 +18,17 @@ jobs:
       max-parallel: 6
       matrix:
         python-version: ["2.7", "3.6", "3.7", "3.8", "3.9", "3.10"]
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v1
-      if: always()
 
     - name: Set up Python ${{ matrix.python-version }}
-      if: always()
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
-      if: always()
       working-directory: ./testing-pip-install/tmuxp
       run: |
         python -m pip install --upgrade pip 
