Add working build for sphinx-doc

--- a/apps/sphinx-doc/utils/Dockerfile
+++ b/apps/sphinx-doc/utils/Dockerfile
@@ -2,9 +2,12 @@
 # RUN  : docker run -it mp/sphinx-doc:0.1.0
 # INFO : Release: Debian GNU/Linux / 11
 
-FROM python:3.13.0a1-bookworm
+# FROM python:3.11-bullseye (Works)
+FROM python:3.12-bullseye
 
 WORKDIR /usr/src/app
+
+RUN pip install -U pip setuptools wheel
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
