--- a/apps/sphinx-doc/utils/Dockerfile
+++ b/apps/sphinx-doc/utils/Dockerfile
@@ -1,10 +1,15 @@
 # BUILD: docker build -t mp/sphinx-doc:0.1.0 . 
 # RUN  : docker run -it mp/sphinx-doc:0.1.0
-# INFO : Release: Debian GNU/Linux / 11
 
-FROM python:3.13-rc-slim
+# Looks like python docker are based on different distros
+# INFO : https://hub.docker.com/_/python
+# INFO : https://www.debian.org/releases/
+
+FROM python:3.12-bullseye
 
 WORKDIR /usr/src/app
+
+RUN pip install -U pip setuptools wheel
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
