Add initial config for running as normal user

--- a/apps/sphinx-doc/utils/Dockerfile
+++ b/apps/sphinx-doc/utils/Dockerfile
@@ -6,13 +6,26 @@
 # INFO : https://www.debian.org/releases/
 
 FROM python:3.12-bullseye
+RUN apt-get update
+RUN apt-get install -y --no-install-recommends build-essential gcc
 
-WORKDIR /usr/src/app
+# RUN python -m venv /opt/venv
+# Make sure we use the virtualenv:
+ENV PATH="/opt/venv/bin:$PATH"
 
+WORKDIR /app
+COPY requirements.txt .
 RUN pip install -U pip setuptools wheel
-
-COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+
+# SOLUTION: v01: Docker build with custom User and Group
+ARG USER_ID
+ARG GROUP_ID
+ARG USER_LOGIN
+RUN addgroup --gid $GROUP_ID $USER_LOGIN
+RUN adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID $USER_LOGIN
+
+USER $USER_LOGIN
 
 COPY . .
 
