--- a/apps/sphinx-doc/utils/requirements.txt
+++ b/apps/sphinx-doc/utils/requirements.txt
@@ -1,26 +1,29 @@
-alabaster==0.7.13
-Babel==2.13.1
-certifi==2023.7.22
+ablog==0.11.11
+alabaster==0.7.16
+babel==2.16.0
+certifi==2024.7.4
 charset-normalizer==3.3.2
-docutils==0.18.1
-idna==3.4
+docutils==0.21.2
+idna==3.7
 imagesize==1.4.1
 importlib-metadata==6.8.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-packaging==23.2
-Pygments==2.16.1
-requests==2.31.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+packaging==24.1
+pydata-sphinx-theme==0.15.4
+Pygments==2.18.0
+requests==2.32.3
 snowballstemmer==2.2.0
-Sphinx==7.2.6
-sphinx-rtd-theme==1.3.0
-sphinxcontrib-applehelp==1.0.7
-sphinxcontrib-devhelp==1.0.5
-sphinxcontrib-htmlhelp==2.0.4
+Sphinx==7.4.7
+sphinx-panels==0.4.1
+sphinx-tabs==3.4.5
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.6
-sphinxcontrib-serializinghtml==1.1.9
-urllib3==2.0.7
-zipp==3.17.0
-setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+urllib3==2.2.2
+zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
