Creating docker for sphinx-doc new theme

--- a/apps/sphinx-doc/docs/Dockerfile
+++ b/apps/sphinx-doc/docs/Dockerfile
@@ -1,14 +1,23 @@
-# --- BUILD ---
-FROM mpc-sphinx-doc-utils:0.1.0 as build
+# RUN  : docker run -it --user root:root mpc-sphinx-doc-docs:0.1.1
 
-WORKDIR /usr/src/doc
+# --- BUILD ---
+# Define a build argument for the version
+ARG BASE_IMAGE_VERSION=0.1.1
+
+# Use the build argument in the FROM instruction
+FROM mpc-sphinx-doc-utils:${BASE_IMAGE_VERSION} as build
+
+# Ensure the virtual environment is set up
+ENV VIRTUAL_ENV="/venv"
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+WORKDIR /usr/local/src/doc
 COPY . .
+
 RUN make html
 
 # --- RUNTIME ---
-FROM nginx:1.25.3
+FROM nginx:stable-alpine as runtime
 WORKDIR /usr/share/nginx/html
 
-COPY --from=build /usr/src/doc/build/html ./
-
-RUN find . -ls
+COPY --from=build /usr/local/src/doc/build/html ./
