Add working networkx with exports to PNG and include to HTML

--- a/apps/sphinx-doc/docs/Makefile
+++ b/apps/sphinx-doc/docs/Makefile
@@ -12,7 +12,15 @@ BUILDDIR      = build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+.PHONY: help Makefile build-networkx-images html
+
+build-networkx-images:
+	@echo "Building networkx images..."
+	make -C test-dynamic/python run
+
+# Define the html target to depend on check
+html: build-networkx-images
+	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
