--- a/apps/sphinx-doc/utils/requirements/requirements-tools.txt
+++ b/apps/sphinx-doc/utils/requirements/requirements-tools.txt
@@ -1,3 +1,22 @@
+accessible-pygments==0.0.5
+beautifulsoup4==4.12.3
 decorator==5.1.1
+feedgen==1.0.0
+
+invoke==2.2.0
+lxml==5.3.0
+markdown-it-py==3.0.0
+mdit-py-plugins==0.4.1
+mdurl==0.1.2
+myst-parser==4.0.0
 networkx==3.3
 pygraphviz==1.13
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+setuptools==73.0.1
+six==1.16.0
+soupsieve==2.6
+typing_extensions==4.12.2
+watchdog==4.0.2
+wheel==0.44.0
+
