--- a/apps/sphinx-doc/utils/requirements/requirements-tools.txt
+++ b/apps/sphinx-doc/utils/requirements/requirements-tools.txt
@@ -1,8 +1,9 @@
 accessible-pygments==0.0.5
+ansible-core==2.17.3
+ansible==10.3.0
 beautifulsoup4==4.12.3
 decorator==5.1.1
 feedgen==1.0.0
-
 invoke==2.2.0
 lxml==5.3.0
 markdown-it-py==3.0.0
@@ -19,4 +20,3 @@ soupsieve==2.6
 typing_extensions==4.12.2
 watchdog==4.0.2
 wheel==0.44.0
-
